Adding a working Dockerfile to run Dexcalibur